# my-code-playground

./: .gitignore  README.md
2025-07-28/: python-groupby-example.py
android-playground/: README.md
android-playground/phonebook/: README.md
android/phonebook/: .gitignore
blog-code-examples/2024-07-20-dynaconf-loaders/: .env  .gitignore  Makefile  README.md  docker-compose.yaml  requirements.txt
blog-code-examples/2024-07-21-dynaconf-loaders/: README.md  _put_parameters_aws.py  docker-compose.yaml
blog-code-examples/2025-07-28-groupby/: python-groupby-example.py
c-playground/Arquivos/: conta_palavras.c  copia_txt.c
c-playground/Casting/: casting_forcando_troca_tipo_variavel.c
c-playground/EP_Resident_Evil/: resident.c
elixir/: README.md  docker-compose.yml
elixir-playground/: Dockerfile
frontend/: README.md
go-playground/: README.md
go/gommit/: go.sum  (+1 more)
jql/: README.md
python/: .gitignore
python-playground/: README.md
python/extending-python-with-c/: pyproject.toml  run.py  setup.py
python/py-rsyslog-redis/: .gitignore  .travis.yml  Makefile  README.rst  pyproject.toml
python/py-rsyslog-redis/docs/: requirements.txt
python/py-rsyslog-redis/docs/source/: conf.py  index.rst
python/py-rsyslog-redis/docs/source/files/: source-code.rst
python/py-rsyslog-redis/rsyslog-config/: 30-pyrsyslogredis.conf
python/py-rsyslog-redis/src/: pyrsyslogredis.py  settings.json
python/py-rsyslog-redis/tests/: test_pyrsyslogredis.py
shell/: README.md
shell-playground/: quota.txt
sql/: README.md  update.sh
sql-playground/: docker-compose.yaml
(+1153 files in other folders)
